--- a/SE-SoreInventoriesFix-Torch/SE-StoreInventoriesFix-Torch.csproj
+++ b/SE-SoreInventoriesFix-Torch/SE-StoreInventoriesFix-Torch.csproj
@@ -137,5 +137,10 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="manifest.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
